# substrate-price-oracle

./: Cargo.toml
example/substrate-node-template/runtime/: Cargo.toml
example/substrate-node-template/runtime/src/: lib.rs
src/: lib.rs
