[package]
name = "substrate-price-oracle"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'sr-primitives/std',
    'runtime-io/std',
    'simple-json/std',
    'rstd/std',
    'inherents/std',
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.inherents]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.simple-json]
default_features = false
git = 'https://github.com/shawntabrizi/simple-json'
package = 'simple-json'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
